added ToDo correctly#

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/index.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Todo App - Text 2 Speecher</title>
+    <title>To-Do App - Text 2 Speecher</title>
   </head>
   <body>
     <div id="root"></div>
